@@ -3,6 +3,7 @@ use Wiki::Toolkit::Setup::SQLite;
 use OpenGuides::Config;
 use OpenGuides;
 use OpenGuides::Feed;
+use OpenGuides::Test;
 use OpenGuides::Utils;
 use Test::More;
 
@@ -20,7 +21,7 @@ if ( $@ ) {
 
 # Which feed types do we test?
 my @feed_types = qw( rss atom );
-plan tests => 10 * scalar @feed_types;
+plan tests => 12 * scalar @feed_types;
 
 my %content_types = (rss=>'application/rdf+xml', atom=>'application/atom+xml');
 
@@ -30,20 +31,10 @@ foreach my $feed_type (@feed_types) {
     unlink <t/indexes/*>;
 
     Wiki::Toolkit::Setup::SQLite::setup( { dbname => "t/node.db" } );
-    my $config = OpenGuides::Config->new(
-           vars => {
-                     dbtype             => "sqlite",
-                     dbname             => "t/node.db",
-                     indexing_directory => "t/indexes",
-                     script_name        => "wiki.cgi",
-                     script_url         => "http://example.com/",
-                     site_name          => "Test Site",
-                     template_path      => "./templates",
-                     home_name          => "Home",
-                     use_plucene        => 1,
-                     http_charset       => "UTF-7",
-                   }
-    );
+    my $config = OpenGuides::Test->make_basic_config;
+    $config->script_name( "wiki.cgi" );
+    $config->script_url( "http://example.com/" );
+    $config->http_charset( "UTF-7" );
 
     # Basic sanity check first.
     my $wiki = OpenGuides::Utils->make_wiki_object( config => $config );
@@ -51,6 +42,9 @@ foreach my $feed_type (@feed_types) {
     my $feed = OpenGuides::Feed->new( wiki   => $wiki,
                                       config => $config );
     is( $feed->default_content_type($feed_type), $content_types{$feed_type}, "Return the right content type" );
+
+    like( $feed->html_equiv_link, qr|http://example.com/wiki.cgi\?|,
+          "html_equiv_link looks right" );
 
     my $feed_output = eval { $feed->make_feed(feed_type => $feed_type, feed_listing => 'recent_changes'); };
     is( $@, "", "->make_feed for $feed_type doesn't croak" );
@@ -64,46 +58,28 @@ foreach my $feed_type (@feed_types) {
 
     # Now write some data, first a minor edit then a non-minor one.
     my $guide = OpenGuides->new( config => $config );
-        
-    # Set up CGI parameters ready for a node write.
-    # Most of these are in here to avoid uninitialised value warnings.
-    my $q = CGI->new;
-    $q->param( -name => "content", -value => "foo" );
-    $q->param( -name => "categories", -value => "" );
-    $q->param( -name => "locales", -value => "" );
-    $q->param( -name => "phone", -value => "" );
-    $q->param( -name => "fax", -value => "" );
-    $q->param( -name => "website", -value => "" );
-    $q->param( -name => "hours_text", -value => "" );
-    $q->param( -name => "address", -value => "" );
-    $q->param( -name => "postcode", -value => "" );
-    $q->param( -name => "map_link", -value => "" );
-    $q->param( -name => "os_x", -value => "" );
-    $q->param( -name => "os_y", -value => "" );
-    $q->param( -name => "username", -value => "bob" );
-    $q->param( -name => "comment", -value => "foo" );
-    $q->param( -name => "edit_type", -value => "Minor tidying" );
-    $ENV{REMOTE_ADDR} = "127.0.0.1";
 
-    my $output = $guide->commit_node(
-                                      return_output => 1,
-                                      id => "Wombats",
-                                      cgi_obj => $q,
-                                    );
-
-    $q->param( -name => "edit_type", -value => "Normal edit" );
-    $output = $guide->commit_node(
-                                   return_output => 1,
-                                   id => "Badgers",
-                                   cgi_obj => $q,
-                                 );
-
-    $q->param( -name => "username", -value => "Kake" );
-    $output = $guide->commit_node(
-                                   return_output => 1,
-                                   id => "Wombles",
-                                   cgi_obj => $q,
-                                 );
+    OpenGuides::Test->write_data(
+                                  node          => "Wombats",
+                                  guide         => $guide,
+                                  username      => "bob",
+                                  edit_type     => "Minor tidying",
+                                  return_output => 1,
+                                );
+    OpenGuides::Test->write_data(
+                                  node          => "Badgers",
+                                  guide         => $guide,
+                                  username      => "bob",
+                                  edit_type     => "Normal edit",
+                                  return_output => 1,
+                                );
+    OpenGuides::Test->write_data(
+                                  node          => "Wombles",
+                                  guide         => $guide,
+                                  username      => "Kake",
+                                  edit_type     => "Normal edit",
+                                  return_output => 1,
+                                );
 
     # Check that the writes went in.
     ok( $wiki->node_exists( "Wombats" ), "Wombats written" );
@@ -111,17 +87,26 @@ foreach my $feed_type (@feed_types) {
     ok( $wiki->node_exists( "Wombles" ), "Wombles written" );
 
     # Check that the minor edits can be filtered out.
-    $output = $guide->display_feed(
-                                   feed_type          => $feed_type,
-                                   feed_listing       => "recent_changes",
-                                   items              => 5,
-                                   username           => "bob",
-                                   ignore_minor_edits => 1,
-                                   return_output      => 1,
-                                 );
+    my $output = $guide->display_feed(
+                                       feed_type          => $feed_type,
+                                       feed_listing       => "recent_changes",
+                                       items              => 5,
+                                       username           => "bob",
+                                       ignore_minor_edits => 1,
+                                       return_output      => 1,
+                                     );
     unlike( $output, qr/Wombats/, "minor edits filtered out when required" );
     like( $output, qr/Badgers/, "but normal edits still in" );
 
     # Check that the username parameter is taken notice of.
     unlike( $output, qr/Wombles/, "username parameter taken note of" );
+
+    # Now make sure that the HTTP euiv link still works with a blank scriptname
+    $config->script_name( "" );
+    $wiki = OpenGuides::Utils->make_wiki_object( config => $config );
+
+    $feed = OpenGuides::Feed->new( wiki   => $wiki,
+                                   config => $config );
+    like( $feed->html_equiv_link, qr|http://example.com/\?|,
+          "html_equiv_link looks right with blank script_name" );
 }
